Fixed banner bottom margin gap

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -126,3 +126,7 @@
     font-family: "Lato"
 .headList
   margin-top: 5px
+
+.banner
+  margin-top: 10px;
+  margin-bottom: 0;
